# duckDBSP

./: .dbsp-quack-ckpt-report.md  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PRD.md  README.md  TODO.md  build.sh  dbsp_cdc.hpp  dbsp_duckdb_types.hpp  dbsp_errors.hpp  dbsp_extension.cpp  dbsp_parser_extension.hpp  dbsp_sql_parser.hpp  roadmap.md  verify_auto_cdc.sh  verify_extension.sh
test/: CMakeLists.txt  catch2_main.cpp  test_helpers.hpp  test_zset.cpp
test/benchmarks/: bench_dataplane.cpp  bench_incremental.cpp  bench_planner_eval.cpp  bench_window.cpp  bench_write_capture.cpp  soak_differential.cpp
test/build_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
test/build_test/duckdb/: DuckDBConfig.cmake  DuckDBConfigVersion.cmake  DuckDBExports.cmake  Makefile  cmake_install.cmake
test/build_test/duckdb/codegen/include/: generated_extension_headers.hpp
test/build_test/duckdb/codegen/src/: generated_extension_loader.cpp
test/build_test/duckdb/extension/core_functions/: Makefile  cmake_install.cmake
test/build_test/duckdb/extension/core_functions/aggregate/: Makefile  cmake_install.cmake
test/build_test/duckdb/extension/core_functions/scalar/: Makefile  cmake_install.cmake
test/build_test/duckdb/extension/parquet/: Makefile  cmake_install.cmake
test/build_test/duckdb/extension/parquet/decoder/: Makefile  cmake_install.cmake  ub_duckdb_parquet_decoders.cpp
test/build_test/duckdb/extension/parquet/reader/: Makefile  cmake_install.cmake  ub_duckdb_parquet_readers.cpp
test/build_test/duckdb/extension/parquet/writer/: Makefile  cmake_install.cmake  ub_duckdb_parquet_writers.cpp
test/build_test/duckdb/src/: Makefile  cmake_install.cmake
test/build_test/duckdb/src/catalog/: Makefile  cmake_install.cmake  ub_duckdb_catalog.cpp.tmp
test/build_test/duckdb/src/catalog/catalog_entry/: Makefile  cmake_install.cmake  ub_duckdb_catalog_entries.cpp
test/build_test/duckdb/src/catalog/default/: Makefile  cmake_install.cmake  ub_duckdb_catalog_default_entries.cpp
test/build_test/duckdb/src/common/: Makefile  cmake_install.cmake  ub_duckdb_common.cpp.tmp
test/build_test/duckdb/src/common/adbc/: Makefile  cmake_install.cmake  ub_duckdb_adbc.cpp.tmp
test/build_test/duckdb/src/common/arrow/: Makefile  cmake_install.cmake  ub_duckdb_common_arrow.cpp
test/build_test/duckdb/src/common/crypto/: Makefile  cmake_install.cmake  ub_duckdb_common_crypto.cpp.tmp
test/build_test/duckdb/src/common/enums/: Makefile  cmake_install.cmake  ub_duckdb_common_enums.cpp.tmp
test/build_test/duckdb/src/common/exception/: Makefile  cmake_install.cmake  ub_duckdb_common_exception.cpp
test/build_test/duckdb/src/common/multi_file/: Makefile  cmake_install.cmake  ub_duckdb_common_multi_file.cpp
test/build_test/duckdb/src/common/operator/: Makefile  cmake_install.cmake  ub_duckdb_common_operators.cpp
test/build_test/duckdb/src/common/progress_bar/: Makefile  cmake_install.cmake  ub_duckdb_progress_bar.cpp.tmp
test/build_test/duckdb/src/common/row_operations/: Makefile  cmake_install.cmake  ub_duckdb_row_operations.cpp.tmp
test/build_test/duckdb/src/common/serializer/: Makefile  cmake_install.cmake  ub_duckdb_common_serializer.cpp.tmp
test/build_test/duckdb/src/common/sort/: Makefile  cmake_install.cmake  ub_duckdb_sort.cpp
test/build_test/duckdb/src/execution/: Makefile  cmake_install.cmake  ub_duckdb_execution.cpp.tmp
test/build_test/duckdb/src/function/: Makefile  cmake_install.cmake  ub_duckdb_function.cpp
test/build_test/duckdb/src/logging/: Makefile  cmake_install.cmake  ub_duckdb_logging.cpp.tmp
test/build_test/duckdb/src/main/: Makefile  cmake_install.cmake  ub_duckdb_main.cpp.tmp
test/build_test/duckdb/src/optimizer/: Makefile  cmake_install.cmake  ub_duckdb_optimizer.cpp.tmp
test/build_test/duckdb/src/parallel/: Makefile  cmake_install.cmake  ub_duckdb_parallel.cpp
test/build_test/duckdb/src/parser/: Makefile  cmake_install.cmake  ub_duckdb_parser.cpp
test/build_test/duckdb/src/planner/: Makefile  cmake_install.cmake  ub_duckdb_planner.cpp
test/build_test/duckdb/src/storage/: Makefile  cmake_install.cmake  ub_duckdb_storage.cpp.tmp
test/build_test/duckdb/src/transaction/: Makefile  cmake_install.cmake  ub_duckdb_transaction.cpp.tmp
test/build_test/duckdb/src/verification/: Makefile  cmake_install.cmake
test/build_test/duckdb/tools/: Makefile  cmake_install.cmake
test/integration/: test_acid_compliance.cpp  test_advanced_sql.cpp  test_advanced_window.cpp  test_auto_cdc.cpp  test_cascading_views.cpp  test_crash_recovery_phase1.cpp  test_crash_recovery_phase2.cpp  test_crash_recovery_phase3.cpp  test_distinct_ddl.cpp  test_engine_assumptions.cpp  test_engine_hook_consumer.cpp  test_error_handling_e2e.cpp  test_extension_basic.cpp  test_extension_cdc.cpp  test_join_complex.cpp  test_optimization_integration.cpp  test_persistence.cpp  test_plan_tee.cpp  test_planner_frontend.cpp  test_recursive.cpp  test_recursive_deletion.cpp  test_security.cpp  test_set_ops.cpp
test/python/: test_attached_catalog.py  test_checkpoint_restore.py  test_dbsp_changes.py  test_multi_instance.py  test_quack_checkpoint.py  test_recovery_markers.py  test_recovery_no_deadlock.py  test_reopen_hang.py  test_table_persistence.py
test/scripts/: verify_error_docs.sh
test/unit/: test_advanced_projection.cpp  test_advanced_window.cpp  test_auto_cdc.cpp  test_cdc_manager.cpp  test_cte_subquery.cpp  test_distinct_on.cpp  test_engine_hook.cpp  test_error_system.cpp  test_minmax_correctness.cpp  test_native_sort_limit.cpp  test_null_handling.cpp  test_optimizer.cpp  test_order_limit_parser.cpp  test_parser_errors.cpp  test_recursive.cpp  test_row_hash.cpp  test_security_validation.cpp  test_set_ops.cpp  test_set_ops_parser.cpp  test_set_ops_structure.cpp  test_spill_store.cpp  test_sql_parser.cpp  test_thread_safety.cpp  test_validation_errors.cpp  test_view_validation.cpp  test_window_functions.cpp  test_window_incremental.cpp  test_write_capture.cpp  test_zset.cpp
(+478 files in other folders)
